Cambios html, creacion de vista Tienda y Usuario, modificacion de layouts, creacion de layout Tienda

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>Total Productos</div>
-                    <div id="total-productos" class="fs-4 fw-bold">No Disponible</div>
+                    <div id="total-productos" class="fs-4 fw-bold">Cargando...</div>
                 </div>
             </div>
             <div class="card-footer d-flex align-items-center justify-content-between">
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>Total Marcas</div>
-                    <div id="total-marcas" class="fs-4 fw-bold">No Disponible</div>
+                    <div id="total-marcas" class="fs-4 fw-bold">Cargando...</div>
                 </div>
             </div>
             <div class="card-footer d-flex align-items-center justify-content-between">
@@ -43,7 +43,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>Total Categorias</div>
-                    <div id="total-categorias" class="fs-4 fw-bold">No disponible</div>
+                    <div id="total-categorias" class="fs-4 fw-bold">Cargando...</div>
                 </div>
             </div>
             <div class="card-footer d-flex align-items-center justify-content-between">
