--- a/Views/Home/Tienda.cshtml
+++ b/Views/Home/Tienda.cshtml
@@ -4,5 +4,164 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Tienda</h2>
+<!DOCTYPE html>
 
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Tienda</title>
+    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/PluginsCSS")
+    @Scripts.Render("~/bundles/modernizr")
+</head>
+<body>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-4">asdf</div>
+                        <div class="col-4">asd3</div>
+                        <div class="col-4">234234</div>
+                        <div class="col-4">asdf</div>
+                        <div class="col-4">werwerv </div>
+                        <div class="col-4">werqwer</div>
+                        <div class="col-4">qwerqwer</div>
+                        <div class="col-4">asdfasdf</div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <!-- Navbar Brand-->
+        <a class="navbar-brand ps-3" href="#" style="width:180px !important">Carrito Compras</a>
+        <!-- Sidebar Toggle-->
+        <button class="btn btn-dark text-white btn-categoria" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i> Ver Categorias</button>
+
+        <!-- Navbar-->
+
+        <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+            <button class="btn btn-close-white" type="submit">
+                <i class="fas fa-shopping-cart"></i>
+                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+            </button>
+        </form>
+        <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#!">Settings</a></li>
+                    <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li><a class="dropdown-item" href="#!">Logout</a></li>
+                </ul>
+            </li>
+        </ul>
+
+
+    </nav>
+    <header class="bg-secondary py-3">
+        <div class="container my-3">
+            <div class="text-center text-white">
+                <h1 class="display-4 fw-bolder">Compra con estilo </h1>
+                <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+            </div>
+        </div>
+    </header>
+
+    <section class="py-2">
+        <div class="container px-2 px-lg-2 mt-5">
+            <div id="catalogo-productos" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+
+            </div>
+        </div>
+    </section>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Content/PluginsJS")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
+    <script>
+        $(".btn-categoria").click(function () {
+            $('#exampleModal').modal('show');
+        });
+
+        $(document).ready(function () {
+
+            jQuery.ajax({
+                url: '@Url.Action("ListarProducto", "Home")',
+                type: "GET",
+                data: null,
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function (data) {
+
+                    $("#catalogo-productos").LoadingOverlay("hide");
+                    if (data.data != null) {
+
+                        $.each(data.data, function (i, item) {
+                            //catalogo-productos
+                            $("<div>").addClass("col mb-5").append(
+                                $("<div>").addClass("card h-100").append(
+                                    $("<img>").addClass("card-img-top").attr({ "src": "data:image/" + item.extension + ";base64," + item.base64 }),
+                                    //Product details
+                                    $("<div>").addClass("card-body p-4").append(
+                                        $("<div>").addClass("text-center").append(
+                                            $("<h5>").addClass("fw-bolder").text(item.Nombre),
+                                            "S/. " + item.Precio
+                                        )
+                                    ),
+                                    //Product actions
+                                    $("<div>").addClass("card-footer p-4 pt-0 border-top-0 bg-transparent").append(
+                                        $("<div>").addClass("d-grid d-md-grid gap-2 d-md-block align-items-center text-center").append(
+                                            $("<button>").addClass("btn btn-outline-dark mt-auto").text("Ver Detalle"),
+                                            $("<button>").addClass("btn btn-outline-dark mt-auto").text("Agregar al carrito")
+
+                                        )
+                                    )
+                                )
+
+                            ).appendTo("#catalogo-productos")
+
+
+                        });
+
+                        //Activo: true
+                        //Descripcion: "Tipo: PS4\nProcesador: AMD\nEntradas USB: 3\nEntradas HDMI: 1\nConectividad: WiFi"
+                        //IdProducto: 1
+                        //Nombre: "Consola de PS4 Pro 1TB Negro"
+                        //Precio: 2000
+                        //RutaImagen: "~/Imagenes/Productos/1.jpg"
+                        //Stock: 50
+                        //base64: "/9j/4AAQSkZJRgABAQEASABIAAD/2wCEAAYEBQYFBAYGBQYHB
+                        //extension: "jpg"
+                    }
+                },
+                error: function (error) {
+                    console.log(error)
+                },
+                beforeSend: function () {
+                    $("#catalogo-productos").LoadingOverlay("show");
+                },
+            });
+
+
+        })
+
+
+    </script>
+</body>
+</html>
