--- a/Views/Home/Marca.cshtml
+++ b/Views/Home/Marca.cshtml
@@ -5,7 +5,7 @@
 }
 
 <ol class="breadcrumb mb-4 mt-4">
-    <li class="breadcrumb-item"><a href="index.html">Mantenedores</a></li>
+    <li class="breadcrumb-item"><a href="#">Mantenedores</a></li>
     <li class="breadcrumb-item active">Marcas</li>
 </ol>
 
@@ -27,7 +27,7 @@
 
                     <th>Descripcion</th>
                     <th>Activo</th>
-                    <th></th>
+                    <th>Opciones</th>
                 </tr>
             </thead>
             <tbody></tbody>
@@ -88,7 +88,7 @@
 
         $(document).ready(function () {
 
-
+                //convertir tabla #tabla en Datatable
                 tabladata = $('#tabla').DataTable({
                     responsive:true,
                     "ajax": {
@@ -134,32 +134,39 @@
 
 
         $(document).on('click', '.btn-editar', function (event) {
-            var json = $(this).data("informacion")
+            //guarda los valores del data-informacion del boton editar
+            var json = $(this).data("informacion");
 
-            abrirModal(json)
+            abrirModal(json);
         });
 
         function abrirModal(json) {
+            //SE LE ASIGNA 0 AL ID y el estado en true
+            //son los input del formulario editar
             $("#txtid").val(0);
             $("#txtdescripcion").val("");
             $("#cboEstado").val(1);
 
+            //si el data-informacion tiene valores(se va a editar)
             if (json != null) {
 
                 $("#txtid").val(json.IdMarca);
                 $("#txtdescripcion").val(json.Descripcion);
-                $("#cboEstado").val(json.Activo == true ? 1 : 0);
+                //$("#cboEstado").val(json.Activo == true ? 1 : 0);
+                $("#cboEstado").val((json.Activo) ? 1 : 0);
             }
-
+            //si se va a solo  crear la marca
             $('#FormModal').modal('show');
         }
 
         $(document).on('click', '.btn-eliminar', function (event) {
-            var json = $(this).data("informacion")
+            //guarda los valores del data-informacion del boton eliminar
+            var json = $(this).data("informacion");
 
             jQuery.ajax({
                 url: '@Url.Action("EliminarMarca", "Home")',
                 type: "POST",
+                //se envia en json el valor de id marca
                 data: JSON.stringify({ id: json.IdMarca}),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
@@ -168,7 +175,7 @@
                     if (data.resultado) {
                         tabladata.ajax.reload();
                     } else {
-                        alert("No se pudo eliminar")
+                        alert("No se pudo eliminar");
                     }
                 },
                 error: function (error) {
@@ -181,8 +188,10 @@
         });
 
         function Guardar() {
+                
             var request = {
-                objeto: {
+                //objeto >>>> debe llevar el mismo nombre que el PARAMETRO de guardarMarca
+                oMarca: {
                     IdMarca: $("#txtid").val(),
                     Descripcion: $("#txtdescripcion").val(),
                     Activo: parseInt($("#cboEstado").val()) == 1 ? true : false
@@ -201,15 +210,15 @@
                         tabladata.ajax.reload();
                         $('#FormModal').modal('hide');
                     } else {
-                        alert("No se pudo guardar los cambios")
+                        alert("No se pudo guardar los cambios");
                     }
                 },
                 error: function (error) {
-                    console.log(error)
+                    console.log(error);
                 },
                 beforeSend: function () {
 
-                },
+                }
             });
 
         }
