fixed overlay error

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
                     }
                 },
                 error: function(error) {
-                    console.log(error)
+                    console.log(error);
                 },
                 beforeSend: function() {
                     
