--- a/Views/Tienda/Index.cshtml
+++ b/Views/Tienda/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="container my-3">
             <div class="text-center text-white">
                 <h1 class="display-4 fw-bolder">Compra con estilo </h1>
-                <p class="lead fw-normal text-white-50 mb-0">With this shop homepage template</p>
+                <p class="lead fw-normal text-white-50 mb-0">--------------------</p>
             </div>
         </div>
     </div>
@@ -74,7 +74,7 @@
                     console.log(error)
                 },
                 beforeSend: function () {
-                    //todo:error LoadingOverlay is not a function
+                    
                     $(".modal-body").LoadingOverlay("show");
                 },
             });
