--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 <a class="small text-white stretched-link" href="@Url.Action("Producto", "Home")">Ver Detalles</a>
                 <div class="small text-white"><i class="fas fa-angle-right"></i></div>
             </div>
-        </div>
+        </div>  
     </div>
     <div class="col-sm-4">
         <!--2 CARD-->
@@ -69,7 +69,7 @@
                     }
                 },
                 error: function(error) {
-                    console.log(error)
+                    console.log(error);
                 },
                 beforeSend: function() {
                     
