Logo de la tienda Gametec

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -53,12 +53,11 @@
             </div>
             <div class="col-lg-5 d-flex flex-column justify-content-around min-vh-100">
                 <!--LOGO-->
-                <div class="px-lg-5 pt-lg-4 pb-lg-2 p-4 w-100">
-                    <img src="~/Imagenes/Login/Logo.svg" class="img-fluid">
+                <div class="px-lg-5 pt-lg-4 pb-lg-2 p-4">
+                    <img src="~/Imagenes/Login/gametec.png" class="img-fluid">
                 </div>
                 <!--FORM-->
                 <div class="px-lg-5 w-100 px-3">
-                    <h2 class="font-weight-bold mb-4">Bienvenido a Tienda X</h2>
                     <form class="mb-4" action="@Url.Content("~/Login/Index")" method="post">
                         @Html.AntiForgeryToken()    
                         <div class="mb-4">
