--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -29,14 +29,14 @@
 
                             <img src="~/Imagenes/Login/1.jpg" class="d-block w-100 foto" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="font-weight-bold">La más potente del mercado</h5>
+                                <h5 class="font-weight-bold">Los mejores videojuegos</h5>
                                 <a class="text-muted text-decoration-none" href="#"> Visita nuestra tienda</a>
                             </div>
                         </div>
                         <div class="carousel-item min-vh-100">
                             <img src="~/Imagenes/Login/2.jpg" class="d-block w-100 foto" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5 class="font-weight-bold">Descubre la nueva generacion</h5>
+                                <h5 class="font-weight-bold">Descubre las ultimas novedades</h5>
                                 <a class="text-muted text-decoration-none" href="#"> Visita nuestra tienda</a>
                             </div>
                         </div>
@@ -53,8 +53,8 @@
             </div>
             <div class="col-lg-5 d-flex flex-column justify-content-around min-vh-100">
                 <!--LOGO-->
-                <div class="px-lg-5 pt-lg-4 pb-lg-2 p-4">
-                    <img src="~/Imagenes/Login/gametec.png" class="img-fluid">
+                <div class="px-lg-3 pt-lg-2 pb-lg-1 p-4">
+                    <img src="~/Imagenes/Login/gametecanimado.gif" class="img-fluid">
                 </div>
                 <!--FORM-->
                 <div class="px-lg-5 w-100 px-3">
@@ -67,11 +67,10 @@
                         <div class="mb-4">
                             <label for="exampleInputPassword1" class="form-label font-weight-bold">Contraseña</label>
                             <input type="password" name="NPassword" class="form-control border-0 " placeholder="Ingresa tu contraseña" id="exampleInputPassword1">
-                            </div>
                             <a href="#" id="emailHelp" class="form-text text-decoration-none text-muted">¿Has olvidado tu contraseña?</a>
-                        
+                        </div>
                         <div class="mb-4">
-                            <button type="submit" class="btn btn-primary w-100">Iniciar Sesion</button>
+                            <button type="submit" class="btn btn-outline-light w-100">Iniciar Sesion</button>
                         </div>
                      </form>
                     <div class="form-floating mb-2 mt-2">
