Banner gametec agregado

--- a/Views/Home/Tienda.cshtml
+++ b/Views/Home/Tienda.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Tienda</title>
+    <title>🎮 Gametec|Los mejores videojuegos</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/PluginsCSS")
     @Scripts.Render("~/bundles/modernizr")
