--- a/Views/Shared/_Layout_Tienda.cshtml
+++ b/Views/Shared/_Layout_Tienda.cshtml
@@ -14,7 +14,7 @@
         <div class="container-fluid">
 
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="@Url.Action("Index","Tienda")" style="width:180px !important">Carrito Compras</a>
+            <a class="navbar-brand ps-3" href="@Url.Action("Index","Tienda")" style="width:180px !important">GAMETEC</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-dark btn-ver-categoria" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i> Ver Categorias</button>
 
