--- a/Views/Tienda/Index.cshtml
+++ b/Views/Tienda/Index.cshtml
@@ -5,15 +5,9 @@
 }
 
 <div class="row mt-5">
-    <div class="bg-secondary py-3">
-        <div class="container my-3">
-            <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Compra con estilo </h1>
-                <p class="lead fw-normal text-white-50 mb-0">--------------------</p>
-            </div>
-        </div>
+    <div class="container-fluid g-0">
+    <img class="img-fluid" src="~/Imagenes/Login/bannergametec.png"/>
     </div>
-
     <div class="py-2">
         <div class="container px-2 px-lg-2 mt-5">
             <div id="catalogo-productos" class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
