Agregado favicon de Gametec

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -8,10 +8,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="~/Imagenes/Icono/favicon.ico">
     <!-- Bootstrap CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/95ab7424cb.js" crossorigin="anonymous"></script>
-    <title>LoginWeb</title>
+    <title>Bienvenido a GAMETEC</title>
     @Styles.Render("~/Content/cssLogin")
 </head>
 <body class="bg-dark">
