--- a/Views/Login/Registrarse.cshtml
+++ b/Views/Login/Registrarse.cshtml
@@ -8,6 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="shortcut icon" href="~/Imagenes/Icono/favicon.ico">
     <title>Registrarse</title>
     @Styles.Render("~/Content/cssLogin")
 </head>
