--- a/Views/Home/Tienda.cshtml
+++ b/Views/Home/Tienda.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Tienda";
+    ViewBag.Title = "GAMETEC | Compra al mejor precio";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
