--- a/Views/Shared/_Layout_Tienda.cshtml
+++ b/Views/Shared/_Layout_Tienda.cshtml
@@ -3,7 +3,9 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Tienda</title>
+    <meta charset="utf-8" />
+    <link rel="shortcut icon" href="~/Imagenes/Icono/favicon.ico">
+    <title>GAMETEC | Compra al mejor precio</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/PluginsCSS")
     @Scripts.Render("~/bundles/modernizr")
