--- a/Content/Site.css
+++ b/Content/Site.css
@@ -62,6 +62,9 @@ body {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+main {
+    background-image: url("https://amymhaddad.s3.amazonaws.com/morocco-blue.png");
+}
 
 hr {
     margin: 1rem 0;
