Cambiado metodo de categorias, ahora aparece en un ul en lugar de un modal

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,12 +4,12 @@
 
 <h1 class="mt-4">Dashboard</h1>
 <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Detalle</li>
+    <li class="breadcrumb-item active">Mantenimiento</li>
 </ol>
 <div class="row">
     <div class="col-sm-4">
         <!--1RA CARD-->
-        <div class="card bg-primary text-white mb-4">
+        <div class="card bg-dark text-white mb-4">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>Total Productos</div>
@@ -24,7 +24,7 @@
     </div>
     <div class="col-sm-4">
         <!--2 CARD-->
-        <div class="card bg-warning text-white mb-4">
+        <div class="card bg-dark text-white mb-4">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>Total Marcas</div>
@@ -39,7 +39,7 @@
     </div>
     <div class="col-sm-4">
         <!--3 CARD-->
-        <div class="card bg-success text-white mb-4">
+        <div class="card bg-dark text-white mb-4">
             <div class="card-body">
                 <div class="d-flex justify-content-between">
                     <div>Total Categorias</div>
