--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -54,7 +54,7 @@
             </div>
             <div class="col-lg-5 d-flex flex-column justify-content-around min-vh-100">
                 <!--LOGO-->
-                <div class="px-lg-3 pt-lg-2 pb-lg-1 p-4">
+                <div class="px-lg-3 pt-lg-2 pb-lg-1 p-4 mx-auto">
                     <img src="~/Imagenes/Login/gametecanimado.gif" class="img-fluid">
                 </div>
                 <!--FORM-->
