--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
                     <div class="small">Sesion iniciada como: </div>
                     @{
                         Usuario u = HttpContext.Current.Session["Usuario"] as Usuario;
-                        @u.Correo
+                        @u.Nombres
                     }
                 </div>
             </nav>
