--- a/Views/Tienda/Producto.cshtml
+++ b/Views/Tienda/Producto.cshtml
@@ -6,7 +6,7 @@
 }
 
 <section class="py-5">
-    <div class="container px-4 px-lg-5 my-5">
+    <div class="container px-4 px-lg-5 my-5 text-white">
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="data:image/@Html.DisplayTextFor(model => model.extension);base64,@Html.DisplayTextFor(model => model.base64)" alt="..."></div>
             <div class="col-md-6">
