--- a/Content/Site.css
+++ b/Content/Site.css
@@ -62,8 +62,8 @@ body {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-main {
-    background-image: url("https://amymhaddad.s3.amazonaws.com/morocco-blue.png");
+.tienda {
+    background-image: url("../Imagenes/gametec/fondo.png");
 }
 
 hr {
