--- a/Views/Home/Usuario.cshtml
+++ b/Views/Home/Usuario.cshtml
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="mb-2">
-                                <label for="txtprecio" class="form-label">Rol</label>
+                                <label for="txtrol" class="form-label">Rol</label>
                                 <input type="text" class="form-control required" id="txtrol" readonly="readonly" value="@rol" name="descripcion" autocomplete="off">
                                
                             </div>
