Cambio de nombre a DAO

--- a/Views/Home/Producto.cshtml
+++ b/Views/Home/Producto.cshtml
@@ -32,7 +32,7 @@
                     <th>Precio</th>
                     <th>Stock</th>
                     <th>Activo</th>
-                    <th></th>
+                    <th>Opciones</th>
                 </tr>
             </thead>
             <tbody></tbody>
@@ -152,11 +152,29 @@
 
         $(document).ready(function () {
 
-
-
-
             tabladata = $('#tabla').DataTable({
                     responsive:true,
+                    dom: 'frtilpB',
+                    buttons: [
+                        {
+                            extend: 'excelHtml5',
+                            text: '<i class="fas fa-file-excel"></i> ',
+                            titleAttr: 'Exportar a Excel',
+                            className: 'btn btn-success'
+                        },
+                        {
+                            extend: 'pdfHtml5',
+                            text: '<i class="fas fa-file-pdf"></i> ',
+                            titleAttr: 'Exportar a PDF',
+                            className: 'btn btn-danger'
+                        },
+                        {
+                            extend: 'print',
+                            text: '<i class="fa fa-print"></i> ',
+                            titleAttr: 'Imprimir',
+                            className: 'btn btn-info'
+                        }
+                    ],	
                     "ajax": {
                         "url": '@Url.Action("ListarProducto", "Home")',
                         "type": "GET",
